{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 4,
  "lineage": "3240520b-d24a-630d-bcde-f1755eff6ca2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054650306aba32dd2",
            "arn": "arn:aws:ec2:us-east-1:805557131516:elastic-ip/eipalloc-054650306aba32dd2",
            "domain": "vpc",
            "id": "eipalloc-054650306aba32dd2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-21-93-1.compute-1.amazonaws.com",
            "public_ip": "23.21.93.1",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805557131516:security-group/sg-0f2b424c28ebafe1d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f2b424c28ebafe1d",
            "ingress": [],
            "name": "attribute-sg",
            "name_prefix": "",
            "owner_id": "805557131516",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07d0e65f2cb963d11"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805557131516:security-group-rule/sgr-0b847fabeb7b2dbf2",
            "cidr_ipv4": "23.21.93.1/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0b847fabeb7b2dbf2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f2b424c28ebafe1d",
            "security_group_rule_id": "sgr-0b847fabeb7b2dbf2",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}